src/pages/automate/common/components/AutomateNavbar.less
@import (reference) '~css/typography';
@import (reference) '~@gorgias/design-tokens/dist/css/layout.less';

:global {
    .popover-body {
        padding: 8px;
    }
}

:local {
    .popoverContainer {
        > div {
            .caption-regular();
            background: var(--neutral-grey-1);
            opacity: 0.9;
            width: 180px;
        }

        a {
            color: var(--neutral-grey-6);
        }
        .arrow::after,
        .arrow::before {
            background: var(--neutral-grey-1);
            opacity: 0.9;
        }
    }

    .disabled {
        color: var(--neutral-grey-5);
        cursor: unset;
        &:hover,
        &:active,
        &:focus {
            background: none;
            color: var(--neutral-grey-5);
        }
    }
}

